feat(blog): improve CSS styling and fix code highlighting
- Fix author name to Victor Robin
- Add comprehensive prose typography (paragraphs, headings, lists, tables)
- Enhance code block styling with gradient background and purple border
- Add Shiki syntax highlighting overrides for better contrast
- Fix grey-on-dark readability issues with brighter token colors
- Add light mode code block styling
- Change Shiki theme to one-dark-pro for vibrant syntax colors

--- a/src/content/blog/ddd-sharedkernel-aggregate-valueobject-domain-events.mdx
+++ b/src/content/blog/ddd-sharedkernel-aggregate-valueobject-domain-events.mdx
@@ -2,7 +2,7 @@
 title: "Building a DDD SharedKernel: AggregateRoot, ValueObject, and Domain Events"
 description: "A practical guide to implementing Domain-Driven Design building blocks in .NET—with production-tested code from the BlueRobin project."
 pubDate: 2026-01-21
-author: "Victor Rentea"
+author: "Victor Robin"
 category: "architecture"
 difficulty: "intermediate"
 tags: ["ddd-series", "dotnet", "clean-architecture", "design-patterns"]
